Creating an entity for the test