@@ -1,5 +1,7 @@
 package br.com.junit5.paunch.domain;
 
+import org.apache.commons.lang3.StringUtils;
+
 import br.com.junit5.paunch.domain.exceptions.ValidationExceptions;
 import lombok.Getter;
 
@@ -16,11 +18,11 @@ public class User {
 	
 	public User(Long id, String name, String email, String password) {
 		
-		if (name.isBlank())
+		if (name == null || name.equals("") || name.trim().equals(""))
 			throw new ValidationExceptions("Name is required");
-		if (email.isBlank())
+		if (StringUtils.isBlank(email))
 			throw new ValidationExceptions("E-Mail is required");
-		if (password.isBlank())
+		if (StringUtils.isBlank(password))
 			throw new ValidationExceptions("Password is required");
 		
 		this.id = id;
